@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.3-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-03 11:23:34, took 00:20:48, with 50 workers, on 4162 cases, 1 failed, 0 traces, 12 retries
+-;-;-;2026-01-03 12:22:50, took 00:12:37, with 50 workers, on 4168 cases, 0 failed, 0 traces, 4 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1137,17 +1137,23 @@ http://sources.freertr.org/cfg/crypt-tls08.tst;crypt-tls08.tst;success;tls with 
 http://sources.freertr.org/cfg/crypt-tls09.tst;crypt-tls09.tst;success;tls with mldsa
 http://sources.freertr.org/cfg/crypt-wireguard01.tst;crypt-wireguard01.tst;success;wireguard over ipv4
 http://sources.freertr.org/cfg/crypt-wireguard02.tst;crypt-wireguard02.tst;success;wireguard over ipv6
-http://sources.freertr.org/cfg/crypt-wireguard03.tst;crypt-wireguard03.tst;#6-run-r1 tping 100 10 2.2.2.2 vrf v1;wireguard over wireguard
+http://sources.freertr.org/cfg/crypt-wireguard03.tst;crypt-wireguard03.tst;success;wireguard over wireguard
 http://sources.freertr.org/cfg/crypt-wireguard04.tst;crypt-wireguard04.tst;success;wireguard over loopback
 http://sources.freertr.org/cfg/crypt-wireguard05.tst;crypt-wireguard05.tst;success;wireguard over asymmetric ports
 http://sources.freertr.org/cfg/demo01.tst;demo01.tst;success;empty demo network
 http://sources.freertr.org/cfg/demo02.tst;demo02.tst;success;addressed demo network
-http://sources.freertr.org/cfg/intop0-ser01.tst;intop0-ser01.tst;success;interop0: hdlc
-http://sources.freertr.org/cfg/intop0-ser02.tst;intop0-ser02.tst;success;interop0: ppp
-http://sources.freertr.org/cfg/intop0-ser03.tst;intop0-ser03.tst;success;interop0: framerelay ansi
-http://sources.freertr.org/cfg/intop0-ser04.tst;intop0-ser04.tst;success;interop0: framerelay cisco
-http://sources.freertr.org/cfg/intop0-ser05.tst;intop0-ser05.tst;success;interop0: framerelay q933a
-http://sources.freertr.org/cfg/intop0-ser06.tst;intop0-ser06.tst;success;interop0: framerelay dce
+http://sources.freertr.org/cfg/intop0-atmdxi.tst;intop0-atmdxi.tst;success;interop0: atmdxi
+http://sources.freertr.org/cfg/intop0-fr01.tst;intop0-fr01.tst;success;interop0: framerelay ansi
+http://sources.freertr.org/cfg/intop0-fr02.tst;intop0-fr02.tst;success;interop0: framerelay cisco
+http://sources.freertr.org/cfg/intop0-fr03.tst;intop0-fr03.tst;success;interop0: framerelay q933a
+http://sources.freertr.org/cfg/intop0-fr04.tst;intop0-fr04.tst;success;interop0: framerelay dce
+http://sources.freertr.org/cfg/intop0-fr05.tst;intop0-fr05.tst;success;interop0: framerelay ppp
+http://sources.freertr.org/cfg/intop0-fr06.tst;intop0-fr06.tst;success;interop0: framerelay ietf
+http://sources.freertr.org/cfg/intop0-hdlc.tst;intop0-hdlc.tst;success;interop0: hdlc
+http://sources.freertr.org/cfg/intop0-lapb01.tst;intop0-lapb01.tst;success;interop0: lapb dte
+http://sources.freertr.org/cfg/intop0-lapb02.tst;intop0-lapb02.tst;success;interop0: lapb dce
+http://sources.freertr.org/cfg/intop0-lapb03.tst;intop0-lapb03.tst;success;interop0: lapb mod128
+http://sources.freertr.org/cfg/intop0-ppp.tst;intop0-ppp.tst;success;interop0: ppp
 http://sources.freertr.org/cfg/intop1-bgp01.tst;intop1-bgp01.tst;success;interop1: ebgp
 http://sources.freertr.org/cfg/intop1-bgp02.tst;intop1-bgp02.tst;success;interop1: ibgp
 http://sources.freertr.org/cfg/intop1-bgp03.tst;intop1-bgp03.tst;success;interop1: bgp locpref
