@@ -1133,17 +1133,23 @@ qc pass: tls with ecdsa
 qc pass: tls with mldsa
 qc pass: wireguard over ipv4
 qc pass: wireguard over ipv6
-failed: wireguard over wireguard
+qc pass: wireguard over wireguard
 qc pass: wireguard over loopback
 qc pass: wireguard over asymmetric ports
 qc pass: empty demo network
 qc pass: addressed demo network
-qc pass: interop0: hdlc
-qc pass: interop0: ppp
+qc pass: interop0: atmdxi
 qc pass: interop0: framerelay ansi
 qc pass: interop0: framerelay cisco
 qc pass: interop0: framerelay q933a
 qc pass: interop0: framerelay dce
+qc pass: interop0: framerelay ppp
+qc pass: interop0: framerelay ietf
+qc pass: interop0: hdlc
+qc pass: interop0: lapb dte
+qc pass: interop0: lapb dce
+qc pass: interop0: lapb mod128
+qc pass: interop0: ppp
 qc pass: interop1: ebgp
 qc pass: interop1: ibgp
 qc pass: interop1: bgp locpref
